--- a/WebVisualizations/wind.html
+++ b/WebVisualizations/wind.html
@@ -47,15 +47,12 @@
         <!-- Create grid layout -->
         <div class="row">
             <div id="summary" class="col-md-7">
-                <span class="txt-summary"><strong>Summary: Latitude vs. X</strong></span> 
+                <span class="txt-summary"><strong>Windiness</strong></span> 
                 <hr>
-                <img src="./img/LatitudevsTemperature.png" alt="LatitudevsTemperature" class="txt-float">
-                The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis,
-                we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.<br><br>
-                After assemblinh the dataset, we used MatPlotlib to plot various aspects of the weather vs. latitude. 
-                Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides
-                the source data and visualizations created as part of the analysis, as well as explanations and descriptions 
-                of any trends and correlations witnessed.
+                <img src="./img/WindinessvsLat.png" alt="WindinessvsLat" class="txt-center">
+                <p>There is not much relation between windiness or wind speed and latitude.
+                    The data seems to be evenly split across the latitudes.
+                </p>
             </div>
 
             <div id="visualization" class="col-md-4">
