--- a/WebVisualizations/wind.html
+++ b/WebVisualizations/wind.html
@@ -81,26 +81,10 @@
 
     </div>
   
-    
-
-
-
-
-
-
-
-
-
-    <!-- Create main section -->
-
-
-
-
-
 
     <!-- Create footer -->
  <footer>
-    <div class="footer">&copy; Copyright Coding Bootcamp 2020</div>
+    <div class="footer">&copy; Copyright Coding Bootcamp FR 2020</div>
   </footer>
   <!-- End of footer -->
 
