--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -82,25 +82,9 @@
     </div>
   
     
-
-
-
-
-
-
-
-
-
-    <!-- Create main section -->
-
-
-
-
-
-
     <!-- Create footer -->
  <footer>
-    <div class="footer">&copy; Copyright Coding Bootcamp 2020</div>
+    <div class="footer">&copy; Copyright Coding Bootcamp FR 2020</div>
   </footer>
   <!-- End of footer -->
 
