--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/custom.css">
 </head>
 <body>
-    <div  class="container-fluid">
+    <div  class="table-responsive">
         
           <!-- Create navigation bar -->
         <div id="navbar">
@@ -53,7 +53,7 @@
            
             <table class="table table-striped">
                 <thead>
-                  <tr style="text-align: center;">
+                  <tr style="text-align: left;">
                     <th></th>
                     <th>City_ID</th>
                     <th>City</th>
