--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -83,27 +83,12 @@
 
 
     </div>
-  
-    
-
-
-
-
-
-
-
-
-
-    <!-- Create main section -->
-
-
-
 
 
 
     <!-- Create footer -->
  <footer>
-    <div class="footer">&copy; Copyright Coding Bootcamp 2020</div>
+    <div class="footer">&copy; Copyright Coding Bootcamp FR 2020</div>
   </footer>
   <!-- End of footer -->
 
