--- a/WebVisualizations/temp.html
+++ b/WebVisualizations/temp.html
@@ -62,7 +62,10 @@
                <hr>
                <div class="row">
                    <div class="col-xs-3 colsm-3 col-md-6">
-                       <img class="img-size" src="./img/LatitudevsTemperature.png" alt="latitudevstemperature" style="width:150px;height:150px;">
+                    <div class="shadow p-3 mb-5 bg-white rounded">
+                       <img class="img-size" src="./img/LatitudevsTemperature.png" alt="latitudevstemperature">
+                    </div> 
+                      
                    </div>
                    <div class="col-lg-6 col-4">
                        <img class="img-size" src="./img/HumidityvsLat.png" alt="HumidityvsLat">
