--- a/WebVisualizations/temp.html
+++ b/WebVisualizations/temp.html
@@ -34,9 +34,6 @@
                         <a class="dropdown-item" href="humidity.html">Humidity</a>
                         <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                         <a class="dropdown-item" href="wind.html">Wind Speed</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="comparison.html">Comparison</a>
-                        <a class="dropdown-item" href="data.html">Data</a>
                     </div>
                   </li>
                 <li><a href="./comparison.html">Comparison</a> </li>
@@ -47,7 +44,7 @@
         <!-- Create grid layout -->
         <div class="row">
             <div id="summary" class="col-md-7">
-                <span class="txt-summary"><strong>Max Temperature</strong></span> 
+                <span class="txt-summary"><strong>Max Temperature vs. Latitude</strong></span> 
                 <hr>
                 <img src="./img/LatitudevsTemperature.png" alt="LatitudevsTemperature" class="txt-center">
                 <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg, Latitude).
@@ -61,19 +58,17 @@
                <span class="txt-visualization"><strong>Visualizations</strong></span> 
                <hr>
                <div class="row">
-                   <div class="col-xs-3 colsm-3 col-md-6">
-                    <div class="shadow p-3 mb-5 bg-white rounded">
+                   <div class="col-lg-6 col-3">
                        <img class="img-size" src="./img/LatitudevsTemperature.png" alt="latitudevstemperature">
                     </div> 
                       
-                   </div>
-                   <div class="col-lg-6 col-4">
+                   <div class="col-lg-6 col-3">
                        <img class="img-size" src="./img/HumidityvsLat.png" alt="HumidityvsLat">
                    </div>
-                   <div class="col-lg-6 col-4">
+                   <div class="col-lg-6 col-3">
                        <img class="img-size" src="./img/CloudvsLat.png" alt="cloudsvslat">
                    </div>
-                   <div class="col-lg-6 col-4">
+                   <div class="col-lg-6 col-3">
                        <img class="img-size" src="./img/WindinessvsLat.png" alt="WindinessvsLat">
                    </div>
                </div>
