--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -34,9 +34,6 @@
                         <a class="dropdown-item" href="humidity.html">Humidity</a>
                         <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                         <a class="dropdown-item" href="wind.html">Wind Speed</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="comparison.html">Comparison</a>
-                        <a class="dropdown-item" href="data.html">Data</a>
                     </div>
                   </li>
                 <li><a href="./comparison.html">Comparison</a> </li>
@@ -47,7 +44,7 @@
         <!-- Create grid layout -->
         <div class="row">
             <div id="summary" class="col-md-7">
-                <span class="txt-summary"><strong>Cloudiness</strong></span> 
+                <span class="txt-summary"><strong>Cloudiness vs. Latitude</strong></span> 
                 <hr>
                 <img src="./img/CloudvsLat.png" alt="cloudsvslat" class="txt-center">
                 <p>There is not much relation between clouds and latitude.
@@ -56,22 +53,23 @@
             </div>
 
             <div id="visualization" class="col-md-4">
-               <span class="txt-visualization"><strong>Visualizations</strong></span> 
-               <hr>
-               <div class="row">
-                   <div class="col-lg-6 col-4">
-                       <img class="img-size" src="./img/LatitudevsTemperature.png" alt="latitudevstemperature">
-                   </div>
-                   <div class="col-lg-6 col-4">
-                       <img class="img-size" src="./img/HumidityvsLat.png" alt="HumidityvsLat">
-                   </div>
-                   <div class="col-lg-6 col-4">
-                       <img class="img-size" src="./img/CloudvsLat.png" alt="cloudsvslat">
-                   </div>
-                   <div class="col-lg-6 col-4">
-                       <img class="img-size" src="./img/WindinessvsLat.png" alt="WindinessvsLat">
-                   </div>
-               </div>
+                <span class="txt-visualization"><strong>Visualizations</strong></span> 
+                <hr>
+                <div class="row">
+                    <div class="col-lg-6 col-3">
+                        <img class="img-size" src="./img/LatitudevsTemperature.png" alt="latitudevstemperature">
+                     </div> 
+                       
+                    <div class="col-lg-6 col-3">
+                        <img class="img-size" src="./img/HumidityvsLat.png" alt="HumidityvsLat">
+                    </div>
+                    <div class="col-lg-6 col-3">
+                        <img class="img-size" src="./img/CloudvsLat.png" alt="cloudsvslat">
+                    </div>
+                    <div class="col-lg-6 col-3">
+                        <img class="img-size" src="./img/WindinessvsLat.png" alt="WindinessvsLat">
+                    </div>
+                </div>
             </div>
 
 
